--- a/style404.css
+++ b/style404.css
@@ -1,4 +1,10 @@
-
+body::-webkit-scrollbar {
+  display: none;
+}
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 ul {
   list-style-type: none;
   margin-right: 20px;
